examples/type-error/12.j
/* Test the following:
 *  - type error: arithmetic operand of wrong type. (Int+String)
 **/

class Another_Main {
    Void main(Void void_fml, String sTR) {
        Arith ar;
        Int intRes;
        String strRes;

        intRes = ar.a + ar.inner.b;
    }

}

class Surface {
    Bool needToTransform;
    Void transform() {
        Surface s;
        Int i;
        Void v;
        s = contain(v);

        while (((((!needToTransform))))) {
            return;
        }
    }

    Surface contain(Void nothing) {
        return this;
    }

    Void replace(Surface another) {
        String a;
        a = null;
        return;
    }
}

class Arith {
    Int a;
    String b;
    Int c;
    SmallArith inner;
}

class SmallArith {
    Int a;
    String b;
    Void c;
}
